# homepage

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  Procfile  README.rst  commands.py  env.example  justfile  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  pytest.ini  requirements-dev.txt  run_dev.sh  show_exif.py  supervisor.conf  view_logs.py
.pre-commit-scripts/: check-uv-sources.py
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
deploy/: ansible.cfg  deploy.yml  hostname.yml  restore_database.yml  secrets.yml  secrets_production.yml  secrets_staging.yml  traefik.yml  uv.yml  vars.yml
deploy/host_vars/: production.yml  staging.yml
deploy/inventory/: hosts.yml
deploy/templates/: env.template.j2  gunicorn.sh.j2  traefik.toml.j2
docs/: Makefile  backup_restore.rst  conf.py  deploy.rst  development.rst  index.rst  install.rst  make.bat  media_utils.rst  seo.rst  tests.rst  weeknote_links.rst
docs/dev/: backlog.txt
homepage/: webmention_config.py
homepage/blogs/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  viewmixins.py  views.py
homepage/core/: apps.py  views.py  webmention_integration.py
homepage/fedi/: apps.py  urls.py  views.py
homepage/handwriting/: README.md  apps.py  compose.py  glyph_data.json
homepage/micropub/: README.md  __init__.py  apps.py  converters.py  forms.py  handler.py  test_micropub_simple.py  urls.py  views.py
homepage/resume/: admin.py  apps.py  cv.py  forms.py  models.py  urls.py  views.py
homepage/resume_cover/: apps.py  plugin.py
homepage/resume_old/: admin.py  apps.py  models.py  plugins.py  timelines.py  views.py
homepage/templates/: 403_csrf.html  base.html
homepage/tests/: test_blog_author_in_template.py  test_post_body_heading_template.py  test_webmention_integration.py  test_webmentions.py  test_webmentions_unit.py
homepage/users/: apps.py  models.py  urls.py  views.py
notebooks/: Untitled.ipynb  audio.ipynb  bugfix_video_insert_chaptermarks.ipynb  categories.ipynb  chaptermarks.ipynb  checkbox_multiple_for_tags.ipynb  comments_for_post.ipynb  cover_image_debug.ipynb  debug_backup.ipynb  debug_broken_galleries.ipynb  debug_category_facets.ipynb  debug_comments_enabled.ipynb  debug_missing_choices.ipynb  dj_notebook_django_kernel.ipynb  dj_notebook_test.ipynb  facet_counts_debug.ipynb  facets_via_api.ipynb  filepond.ipynb  find_template_debug.ipynb  functool_wraps_test.ipynb  migrate_from_blogs_to_cast.ipynb  python_data_model.ipynb  renditions_debug.ipynb  search_tests.ipynb  sql_to_mermaid.ipynb  storages.ipynb  tag_checkbox_widget.ipynb  tag_facets_debug.ipynb  tags_debug.ipynb  update_theme_traceback.ipynb  upload_handler.ipynb  video-chooser-debug.ipynb  videotest.ipynb  wrong_feed_debug.ipynb
notebooks/images/: calc_thumbnail_width.ipynb  create_new_rendition_from_image.ipynb  recreate_renditions_for_post.ipynb  regenerate_image_renditions.ipynb  rendition_debug.ipynb
notebooks/performance/: blog_list_page_with_cache.ipynb  cachable_data_for_post_data.ipynb  (+25 more)
requirements/: base.txt  develop.in  develop.txt  local.txt  production.in  production.txt  test.txt
scripts/: get_video_data.py  postactivate  prod_backup.py  prod_to_local.py
specs/: 2026-07-08-weeknote-links-block-plan.md
utility/: install_python_dependencies.sh
(+181 files in other folders)
