[tool.poetry]
name = "python-podcast"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8"
requests = "^2"
djangorestframework = "^3"
django-model-utils = "^4"
django-environ = "^0.4"
django-crispy-forms = "^1"
Django = "^3.2"
numpy = "*"
argon2-cffi = "^20"
typer = "^0.3"
gunicorn = "^20"
django_redis = "^4"
pandas = "^1"
matplotlib = "^3"
django-filepond = "^0.1.2"
django-storages = "^1.9.1"
paramiko = "^2.7.1"
python-dotenv = "^0.17"
boto3 = "^1.14.21"
raven = "^6.10.0"
django-anymail = {extras = ["mailgun"], version = "*"}
whitenoise = "^5.1.0"
cyberpandas = "^1.1.1"
django-fluent-comments = {git = "https://github.com/ephes/django-fluent-comments"}
django-imagekit = {git = "https://github.com/ephes/django-imagekit"}
django-contrib-comments = {git = "https://github.com/ephes/django-contrib-comments"}
django-cast = {git = "https://github.com/ephes/django-cast"}
django-indieweb = "^0.0.5"

[tool.poetry.dev-dependencies]
Werkzeug = "*"
pytest = "*"
pytest-sugar = "^*"
factory-boy = "*"
flake8 = "*"
coverage = "*"
ipdb = "*"
django-extensions = "*"
django-debug-toolbar = "*"
Sphinx = "*"
jupyter = "^1"
ipython = "^7"
pytest-django = "*"
black = "*"
sphinx_rtd_theme = "*"
django-test-plus = "^1.4.0"

[tool.poetry.scripts]
test = "commands:test"
pytest = "commands:pytest"
lint = "commands:flake8"
black = "commands:black"
coverage = "commands:coverage"
shell = "commands:shell"
docs = "commands:docs"
command = "commands:command"
attach = "commands:attach"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
